Fix: Fully cover content section with overlay
- Allow scroll of body by changing height to minimum of 100% viewport
and allow automatic overflow
- Change layout of body from Grid to Flexbox
- Remove header shadow as its not visible due to content's dark
background
- Set overlay position to cover whole content section
- Rename import statement in index.js due to the renaming of initial-page-load file

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,15 +11,15 @@
 }
 
 body {
-   width: 100vw;
-   height: 100vh;
-   display: grid;
-   grid-template-rows: 1fr 8fr;
+   min-height: 100vh;
+   display: flex;
+   flex-direction: column;
+   overflow-y: auto;
    
 }
 
 header {
-    box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+    height: 10vh;
 }
 
 .navbar--main {
@@ -39,18 +39,26 @@ header {
 }
 
 #content {
+    flex-grow: 1;
     background-image: url(bakery.jpg);
     background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    position: relative;
 }
 
-.main {
-    background-color: rgba(0, 0, 0, 0.7);
-    height: 100%;
-    display: flex;
+.main { 
     flex-direction: column;
+    color: white;
+}
+
+.main, .menu {
+    position:absolute;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
 }
 
 h1 {
@@ -60,3 +68,4 @@ h1 {
 .main--headline {
     font-size: 1.5em;
 }
+
